- avoid_ignore_# is replaced with avoidGM_ignoreList (see below)
- equipAuto misses changed to target_misses
  equipAuto totalMisses changed to target_totalMisses
- 'party create "<party_name>"' command renamed to
  'party create <party_name>'.
- 'Pink Spring' renamed to "Roki's Weil" to match the skill name
  in spells.txt (for whenGround/whenNotGround).

Bug fixes:
- 'i' command now displays equipped arrows under Equipment (Equipped).
- Fix useSelf_item dcOnEmpty and getAuto buggyness caused by lag.
- Don't try to statsAddAuto before the stat point info has been received.
- Shop title in shop.txt is detected better.
- Fix autoTalkCont (caused next step to happen too fast).
- Don't redirect command output if XKore_silent is enabled.
- Fix "party leave" crash when not in party.
- Only teleport-on-hit from monsters if they do not miss.
- Hopefully fix daggersins' weapons ending up on the wrong hand.
- Guild auto deny timeout was not included in timeouts.txt.
  Deal auto deny timeout was not being used.
- 'private 1' in servers.txt is also effective when changing map server.
- Fix crash with the weight command.
- Give an error if someone tries to storage an equipped item.
- Show unknown for public chat distance if player is off screen.
- Don't display PVP rank if you're not in PVP. (Workaround for server-side
  bug that still sends you your PVP rank for some reason.)
- Detect NPC spawning (only happens when server first loads).
- Don't storage or cart-add pets if they are in use (caused disconnect).
- Show full class name in the pl # command.
- 'as' command works now when attacking players.
- Detect when a targeted player dies ("attack" ai_seq will be dequeued).
- Fix cartAuto crash bug for Perl 5.6. Caused by:
      delete $cart{'inventory'}[$index];
- Don't show warnings when "vl" command has weird shops.
- Don't attempt to gather items near portals lest they suck you in.
- Fix avoid list for playerIDs near you.